# NexusShell

./: API.md  Cargo.toml  EXAMPLES.md  LICENSE  MANUAL.md  NEXUS_CONTAINER_SPEC_V0.1.md  README.md  build.rs  fix_instructions.txt  temp_semantic.rs
.github/workflows/: release.yml
NexusShell-Rule/: directory_structure.md  docs.md  rule.md  specifications.md  technical_requirements.md
core/executor/: Cargo.toml
core/executor/src/: lib.rs
core/executor/src/async_runtime/: error.rs  metrics.rs  mod.rs  runtime_config.rs  stats.rs  thread_pool.rs
core/executor/src/job_controller/: error.rs  job.rs  job_group.rs  metrics.rs  mod.rs  resource_monitor.rs  scheduler.rs
core/executor/src/pipeline_manager/: command.rs  error.rs  mod.rs  optimizer.rs  pipe.rs  pipeline.rs  planner.rs  processor.rs  scheduler.rs  stages.rs
core/executor/src/pipeline_manager/distributed/: cluster.rs  communication.rs  data_transfer.rs  discovery.rs  failover.rs  heartbeat.rs  mod.rs  monitoring.rs  node.rs  resource_manager.rs  security.rs  task.rs
core/executor/src/pipeline_manager/error/: mod.rs
core/executor/src/pipeline_manager/pipeline/: mod.rs
core/executor/src/pipeline_manager/stages/: mod.rs
core/executor/src/remote_executor/: config.rs  connection.rs  error.rs  mod.rs  protocol.rs
core/executor/src/sandbox/: config.rs  container.rs  error.rs  mod.rs  policy.rs
core/parser/: Cargo.toml
core/parser/src/: ast.rs  completer.rs  context.rs  env_resolver.rs  error.rs  error_recovery.rs  grammar.rs  interpreter.rs  lexer.rs  lib.rs  metrics.rs  parser.rs  plugin.rs  predictor.rs  semantic.rs  semantic_backup.rs  span.rs  tests.rs  token.rs  type_system.rs
core/runtime/: Cargo.toml
core/runtime/builtin_commands/: Cargo.toml
core/runtime/builtin_commands/src/: lib.rs  registry.rs
core/runtime/builtin_commands/src/core/: cd.rs  echo.rs  env.rs  exit.rs  export.rs  jobs.rs  mod.rs  pwd.rs  set.rs  source.rs  test.rs  unset.rs  which.rs
core/runtime/builtin_commands/src/fs/: cp.rs  find.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  rm.rs  touch.rs  utils.rs
core/runtime/builtin_commands/src/network/: curl.rs  httpserver.rs  mod.rs
core/runtime/builtin_commands/src/plugin/: mod.rs
core/runtime/builtin_commands/src/process/: mod.rs
core/runtime/builtin_commands/src/security/: chmod.rs  chown.rs  mod.rs  passwd.rs  su.rs
core/runtime/builtin_commands/src/system/: df.rs  free.rs  mod.rs  ps.rs  uname.rs  uptime.rs
core/runtime/builtin_commands/src/text/: cat.rs  cut.rs  distinct.rs  grep.rs  head.rs  map.rs  mod.rs  sed.rs  slice.rs  sort.rs  stats.rs  tail.rs  tr.rs  uniq.rs  wc.rs
core/runtime/src/: environment.rs  evaluation.rs  execution.rs  io.rs  lib.rs  plugin.rs  security.rs
libnexuscontainer/: Cargo.toml
libnexuscontainer/src/: cgroup.rs  child_process.rs  config.rs  container.rs  errors.rs  image.rs  ipc.rs  lib.rs  namespace.rs  network.rs  oci.rs  registry.rs  runtime.rs  sandbox.rs  security.rs  storage.rs  utils.rs  volume.rs  windows.rs
nexus-ctl/: Cargo.toml
nexus-ctl/src/: commands.rs  config.rs  daemon.rs  image.rs  main.rs  network.rs  utils.rs  volume.rs
nexus-runtime/: Cargo.toml
nexus-runtime/src/: main.rs  oci.rs  runtime.rs  spec.rs
nexusd/: Cargo.toml  build.rs
nexusd/proto/: nexus.proto
nexusd/src/: api.rs  config.rs  container_manager.rs  daemon.rs  event_manager.rs  generated.rs  grpc.rs  http.rs  image_manager.rs  main.rs  metrics.rs  network_manager.rs  volume_manager.rs
scripts/: build_packages.sh
src/: capabilities.rs  cgroups.rs  config.rs  lib.rs  main.rs  pivot_root.rs  prompt.rs  seccomp.rs  shell.rs  user_namespace.rs
src/ui/: animations.rs  fonts.rs  layout.rs  mod.rs  panes.rs  renderer.rs  settings.rs  tabs.rs  theme.rs
