[workspace]
members = [
    "libnexuscontainer",
    "nexus-ctl",        # フェーズ1: CLIクライアント
    "nexusd",
    # "nexus-runtime",    # 一時的に無効化
    # "nexusd",         # フェーズ2で追加予定
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[workspace.dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
anyhow = "1.0.86"
