[package]
name = "nexusshell"
version = "1.0.0"
edition = "2021"
authors = ["menchan-Rub"]
description = "World's Most Advanced Shell - Perfect Multi-Language Enterprise Shell"
license = "MIT"
repository = "https://github.com/menchan-Rub/NexusShell"
keywords = ["shell", "terminal", "cli", "command-line", "advanced"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rustyline = "13.0"
dirs = "5.0"
whoami = "1.4"
uuid = { version = "1.6", features = ["v4"] }
num_cpus = "1.16"
regex = "1.10"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
sha2 = "0.10"
sha1 = "0.10"
base64 = "0.21"
serde_json = "1.0"
which = "4.4"
glob = "0.3"
crossterm = "0.27"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
