[package]
name = "nexusshell"
version = "1.0.0"
edition = "2021"
authors = ["menchan-Rub"]
description = "World's Most Advanced Bash-Compatible Shell - Perfect Multi-Language Enterprise Shell"
license = "MIT"
repository = "https://github.com/menchan-Rub/NexusShell"
keywords = ["shell", "terminal", "cli", "command-line", "bash"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rustyline = "13.0"
dirs = "5.0"
whoami = "1.4"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
num_cpus = "1.16"
regex = "1.10"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
sha2 = "0.10"
sha1 = "0.10"
base64 = "0.21"
serde_json = "1.0"
which = "4.4"
glob = "0.3"
crossterm = "0.27"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
shell-words = "1.1.0"
nix = "0.27"
libc = "0.2"
pest = "2.7"
pest_derive = "2.7"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"
signal-hook = "0.3"
tempfile = "3.8"
memmap2 = "0.9"
rayon = "1.8"
nom = "7.1"
unicode-width = "0.1"
unicode-segmentation = "1.10"
[target.'cfg(unix)'.dependencies]
termion = "2.0"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
console = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
