[package]
name = "libnexuscontainer"
version = "0.1.0"
edition = "2021"
authors = ["NexusShell Team <info@nexusshell.com>"]
description = "Core library for NexusContainer providing Linux sandboxing features."
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
thiserror = "1.0"
anyhow = "1.0.70" # For tests primarily, or internal errors not exposed in lib API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = "0.27"
caps = { version = "0.5", optional = true }
libc = "0.2.155"

# OCI Image Format dependencies
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
digest = "0.10"
oci-spec = "0.6"
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }
futures-util = { version = "0.3", optional = true }
tokio-tar = { version = "0.3", optional = true }
tempfile = "3.0"
regex = "1.0"
base64 = { version = "0.21", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = { version = "0.3.4", optional = true }
libseccomp-rs = { version = "0.1.0", optional = true }

[dev-dependencies]
env_logger = "0.11.3"

[features]
default = []
linux-features = ["caps", "cgroups-rs", "libseccomp-rs"]
tar = ["dep:tar", "dep:flate2"]
registry = ["dep:reqwest", "dep:futures-util", "dep:base64"]
image = ["tar"] 