[package]
name = "nexusshell_executor"
version = "0.1.0"
edition = "2021"
authors = ["AetherOS Team"]
description = "NexusShellのエグゼキュータモジュール"

[dependencies]
# エラー処理
thiserror = "1.0"
anyhow = "1.0"

# 非同期処理
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# データ構造
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.4"
indexmap = "1.9"

# SSH関連
ssh2 = "0.9.4"

# 並行処理
crossbeam = "0.8"
parking_lot = "0.12"
rayon = "1.7"

# プロセス管理
nix = { version = "0.26", features = ["process", "signal", "user"] }
signal-hook = "0.3"
which = "4.4"

# サンドボックス (Linux のみ)
caps = { version = "0.5", optional = true }
seccomp-sys = { version = "0.1.3", optional = true }
libc = "0.2"

# リソース管理
num_cpus = "1.15"  
sysinfo = "0.29"

# ロギング
tracing = { version = "0.1", features = ["attributes"] }
log = "0.4"

# ユーティリティ
once_cell = "1.18"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.1"
test-case = "3.1"
mockall = "0.11"
tempfile = "3.6"

[features]
default = ["seccomp", "linux-sandbox"]
seccomp = ["seccomp-sys"]
linux-sandbox = ["caps"]
nightly = []
profiling = [] 