[package]
name = "nexusshell_executor"
version = "0.1.0"
edition = "2021"
authors = ["AetherOS Team"]
description = "NexusShellのエグゼキュータモジュール"

[dependencies]
# エラー処理
thiserror = "1.0"
anyhow = "1.0"

# 非同期処理
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# データ構造
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.4"
indexmap = "1.9"

# SSH関連
ssh2 = "0.9.4"

# 並行処理
crossbeam = "0.8"
parking_lot = "0.12"
rayon = "1.7"

# プロセス管理
nix = { version = "0.26", features = ["process", "signal", "user"] }
signal-hook = "0.3"
which = "4.4"

# サンドボックス (Linux のみ)
caps = { version = "0.5", optional = true }
seccomp-sys = { version = "0.1.3", optional = true }
libc = "0.2"

# リソース管理
num_cpus = "1.15"  
sysinfo = "0.29"

# ロギング
tracing = { version = "0.1", features = ["attributes"] }
log = "0.4"

# ユーティリティ
once_cell = "1.18"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
mdns-sd = "0.7"
hostname = "0.3"
tempfile = "3.6"

# Argon2パスワードハッシュライブラリ
argon2 = "0.5.2"
rand_core = { version = "0.6.4", features = ["std"] }
base64 = "0.21.5"

# 証明書検証関連
x509-parser = "0.15.1"
sha2 = "0.10.8"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
time = "0.3.30"

# 暗号化関連
aes-gcm = "0.10.3"
x25519-dalek = { version = "2.0.0", features = ["getrandom", "static_secrets"] }
hkdf = "0.12.3"

# 署名関連
ed25519-dalek = "2.1.0"
rand = "0.8.5"

# HTTP (プロメテウスエクスポーター用)
hyper = { version = "0.14", features = ["full"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.1"
test-case = "3.1"
mockall = "0.11"

[features]
default = ["seccomp", "linux-sandbox"]
seccomp = ["seccomp-sys"]
linux-sandbox = ["caps"]
nightly = []
profiling = [] 