[package]
name = "nexusshell_runtime"
version = "0.1.0"
edition = "2021"
authors = ["NexusShell Team"]
description = "NexusShell実行環境"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.4"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"
mockall = "0.11"
proptest = "1.0"
test-case = "3.0"
tempfile = "3.8"

# [[bench]]
# name = "runtime_benchmarks"
# harness = false 